edits and final markdown Please enter the commit message for your changes. Lines starting

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -25,13 +25,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A hedgefund is seeking to profit from the volatility and inefficiences of the cryptocurrency market. They would like to focus on Dogecoin, a cryptocurrency with a $30B market cap. Their marketing team desires to better understand the sentiment around dogecoin, for understanding other owners and what words or phrases most reseonate with them. \n",
+    "A hedgefund is seeking to profit from the volatility and inefficiences of the cryptocurrency market. They would like to focus on Dogecoin, a cryptocurrency with a $30B market cap. Their marketing team desires to better understand the sentiment around dogecoin, for understanding other owners and what words or phrases most resonnate with them. \n",
     "\n",
-    "Dogecoin began as satire, using a meme of a Shiba Inu dog misspelled as \"doge.\" The makers, Billy Marcus and Jackson Palmer, created it in late 2013. Then launched a large campaing including sending the Jamaican Bobled team to the '14 olympics and sponsoring a Nascar. \n",
+    "Dogecoin began as satire, using a meme of a Shiba Inu dog misspelled as \"doge.\" The makers, Billy Marcus and Jackson Palmer, created it in late 2013. They then launched a large campaign including sending \"the Jamaican Bobsliegh team to the 2014 Olympics ... and sponsoring a Nascar driver\" ([Forbes](https://www.forbes.com/advisor/investing/what-is-dogecoin/)). As a cryptocurrency, Dogecoin relies on block-chain cryptography. All coin holder's carry a ledger. And miner's have to solve math problems to create new chains; miners are rewarded for this work with dogecoin. \n",
     "\n",
-    "As a cryptocurrency, Dogecoin also relies on block-chain cryptography. All coin holder's carry a ledger. And miner's have to solve mathproblems to create new chains. They are rewarded with dogecoin. \n",
-    "\n",
-    "Dogecoin differs from many other cryptocurrency in that it has no lifetime cap on the number of coins that can be produced. This means it is highly inflationary--by design. This diminishes the coin as a store of value, but increases its use as an actual currency. "
+    "Dogecoin differs from many other cryptocurrencies in that it has no lifetime cap on the number of coins that can be produced. This means it is \"highly inflationary\" ([Forbes](https://www.forbes.com/advisor/investing/what-is-dogecoin/)),  diminishing the coin as a store of value, but increasing its use as an actual currency. "
    ]
   },
   {
@@ -45,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Market volatililty and the speculative nature of Dogecoin increase risk of owning asset. Since the price of other cryptocurrencies have proven susceptible to the sentiment of its buyers and sellers (citation), the hedfund seeks deeper comprehension of the sentiment of those very buyers and seller, in order to get a better grasp on the market, and possibly leverage that information for profits in the future. This project uses Twitter as a proxy for the buyers and sellers, and analyzes tweets containing the word \"dogecoin.\" "
+    "Market volatililty and the speculative nature of Dogecoin increase risk of owning the asset. Since the price of other cryptocurrencies have proven susceptible to the sentiment of its buyers and sellers ([Frontiers in Physics](https://www.frontiersin.org/articles/10.3389/fphy.2019.00098/full)), the hedfund seeks deeper comprehension of the sentiment of those very buyers and sellers, in order to get a better grasp on the market and possibly leverage that information for profits in the future. This project uses Twitter as a proxy for the buyers and sellers, and analyzes tweets containing the word \"dogecoin\" unto that end.  "
    ]
   },
   {
@@ -59,11 +57,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Twitter API, Tweets, Features, Target\n",
+    "This project used Twitter's Free API and Tweepy to scrape thousands of tweets. This came with some stipulations (that user information would not be shared) and some limitations. Tweets can only be scraped within the last 7 days, in increments of 180 tweets every 15 minutes, with a cap of 2,600 at one time. Thus, it takes 3 and 1/2 hours to scrape an accumulated 2,500 tweets. \n",
     "\n",
-    "Twitter's API has limitations on retrieval. One can only pull tweets from the last 7days, in increments of 180 tweets every 15 minuts, with a cap of 2,600 at one time. Thus, it takes 3 and 1/2 hours to pull accumulate 2,500 tweets. \n",
-    "\n",
-    "Retweets will be excluded because the Hedgefund is trying to get a sense of dogecoin audience, not the retweets of one bot (which we discovered within our first few pulls)."
+    "Retweets were excluded because the Hedgefund is trying to get a sense of dogecoin audience and their sentiments. Retweets often were simply one bot retweeting any account that mentioned dogecoin. During one of our scrapings, bot retweets were almost 90% of the scraped tweets. "
    ]
   },
   {
@@ -146,7 +142,7 @@
    "metadata": {},
    "source": [
     "### Concatenate Tweets\n",
-    "Because Twitter's API has a limit, we had to pull tweets in batches. Below, we concatenate all these serparate pulls. "
+    "Because Twitter's API has a limit, we had to scrape tweets in batches. Below, we concatenate all these serparate pulls, totaling to 4547 tweets. "
    ]
   },
   {
@@ -168,8 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write a function for Vectorizing the Tweets\n",
-    "\n",
+    "## Write a function for vectorizing\n",
     "The below functions build our vectorized data. Note, this function removes stopwords and sorts the vectorized. The function also returns a list of the top occurring words. These functions are used later on."
    ]
   },
@@ -231,13 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using Sentiment Intensity Analyzer with VADER to Build Our Target Variable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Using Sentiment Intensity Analyzer with VADER to Build Our Target Variable\n",
     "The below cell uses textblob and sentiment intensity analyzer and creates a dataframe with the polarity, subjectivity and sentiment of the tweet."
    ]
   },
@@ -405,7 +394,7 @@
     "positive = format(percentage(df_probs[df_probs['sentiment'] == 1].shape[0],df_probs.shape[0]),'.1f')\n",
     "negative = format(percentage(df_probs[df_probs['sentiment'] == 0].shape[0],df_probs.shape[0]),'.1f')\n",
     "\n",
-    "labels = ['Positive ['+str(positive)+'%]','Negative/Neutral ['+str(negative)+'%]']\n",
+    "labels = ['Positive ['+str(positive)+'%]','Negative ['+str(negative)+'%]']\n",
     "\n",
     "sizes = [positive, negative]\n",
     "colors = ['yellowgreen', 'blue']\n",
@@ -421,13 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Engineering our Positive Reinforcement Variable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Feature Engineering our Positive Reinforcement Variable\n",
     "We filter for only positive tweets as marked by the sentiment intensity analyzer and make a dataframe."
    ]
   },
@@ -555,13 +538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train, Test, Split of Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Train, Test, Split of Data\n",
     "The below cell shows our two features of the tweet text and the count of positive words in each tweet."
    ]
   },
@@ -688,7 +665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The tweet text is then vectorized and the positive word counts are concatenated back to the vectorized data. "
+    "The tweet text is then vectorized and the positive word counts are concatenated back to the vectorized data."
    ]
   },
   {
@@ -711,13 +688,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Building Models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Baseline"
    ]
   },
@@ -725,7 +695,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our baseline is the average of the majority class, which is 68% neutral/negative. "
+    "Our baseline is the average of the majority class, which is 69% neutral/negative. "
    ]
   },
   {
@@ -752,14 +722,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For our final model we use multinomial naive bayes and feed in our vectorized data and positive word counts. We use naive bayes to help prevent overfitting. The output of this cell shows the cross validation results, the test predictions and the accuracy score of predicting on test data."
+    "## The Model\n",
+    "For our final model we use multinomial naive bayes and feed in our vectorized data and positive word counts. We use naive bayes to help prevent overfitting. The output of this cell shows the cross validation results, the test predictions and the accuracy score of predicting on test data. Our accuracy score was 78% on the test data."
    ]
   },
   {
@@ -803,7 +767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Confusion Matrix"
+    "## Confusion Matrix"
    ]
   },
   {
@@ -841,9 +805,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We recommend using these words and phrases. \n",
+    "This project revealed that most of the confidence in dogecoin is built around hype. For this reason we would want to use our model to continue to monitor dogecoin sentiment to gauge our own confidence in the coin.\n",
     "\n",
-    "They mean this. "
+    "It’s also clear that a lot of the language used for dogecoin is slang and not always intuitive. So we want to track, understand and then correctly use the buzz words in our social media campaigns. This will strengthen outreach towards investors interested in looking at dogecoin.\n"
    ]
   },
   {
@@ -857,9 +821,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Going forward, we would love to offer sentiment analysis over time, along with the quantity of tweets at any given time, to predict price changes. \n",
+    "For this project we only tracked single/double words and tied them to the positive class. For future research we’d like to look at words for the negative/neutral class and also incorporating phrases to better improve the model performance.\n",
     "\n",
-    "We also would love to anaylze different excahnges. for example, reddit's wall street bets often trades in Robinhood. So doing a comparative sentiment analysis might help with arbitrage of dogecoin or between other currencies. "
+    "Finally we’d like to try and apply our sentiment analysis towards predicting the future price of dogecoin. We would look into seeing if there is a correlation between social media sentiment around the coin and how the coin price changes.\n",
+    "\n",
+    "\n"
    ]
   }
  ],
